--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "weatherApp",
+  "description": "a simple weather app written in AngularJS using weather underground API",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/yzatgit/weatherApp",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -11,7 +11,6 @@
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
-    "bootstrap": "~3.0.0",
-    "iso-3166-country-codes-angular": "~1.0.2"
+    "bootstrap": "~3.0.0"
   }
 }
