--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular-resource": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
-    "bootstrap": "~3.0.0"
+    "bootstrap": "~3.0.0",
+    "chart.js": "~2.7.2",
+    "angular-chart.js":"~1.1.1"
   }
 }
